2005-06-13  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c: Display usage message on the standard output and be less
	verbose on bad options.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c: Make the `usage' message more verbose.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c: Add a `-n' option to precise the top #define used in
	the generated header.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y,
	* monoburg.c,
	* monoburg.h: Rename "warn_cpp" function to "warn_cxx".

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c: Output MB_TERM* and MB_NTERM* in enums `MBTerms' and
	`MBNTerms'.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Do not output "#line" directives when reading rules.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Search through `include_dirs' paths for file to include.
	* monoburg.h,
	* monoburg.c: Add a `-I' option to precise include directories.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Add `#line' directives output on `%include', CODE and
	in `yyparsetail'.
	* monoburg.c: Add `#line' directives output just before the call to
	`yyparse'.

2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* config.h.in: New.
	* configure.ac: Output PACKAGE infos in config.h.
	* monoburg.c: Add `-v' and `--version' options.
	* Makefile.am: Fix distribution and cleaning rules.
	* monoburg.h: Include `config.h'.

2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y:  Add  a  `%include'  directive  which  includes  files
	verbatim. Syntax is:
	%include filename
	without double quote or anything.
	
	This directive could be used anywhere.
	
	* parser.y (yyerror):   Enhance    verbosity   on   error  message
	accordingly.

	* monoburg.h: Add the info about included file storage.